fixes #38 added support for Java 18, updated documentation, reworked Dockerfile